buck's review changes
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -46,7 +46,7 @@
                     <tbody id="balanceDetailBox">
                       <tr id="balanceDetailRow">
                         <td data-tmpl="category" class="grey">
-                         <span></span>
+                         <span data-tmpl="name"></span>
                          <span data-tmpl="tooltipMsg" data-tooltip="" class="ico-info d-hide"></span>
                         </td>
                         <td data-tmpl="subBalance"></td>
