multi: Add wallet balance tooltip and all known wallet balances to translation map (#2357)
* add wallet balance tooltip and all known wallet balances to translation

- Added `asset.CustomBalance` struct type for custom balances.

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -45,7 +45,10 @@
                   <table id="balanceTable" class="fs15 mt-2 w-100">
                     <tbody id="balanceDetailBox">
                       <tr id="balanceDetailRow">
-                        <td data-tmpl="category" class="grey"></td>
+                        <td data-tmpl="category" class="grey">
+                         <span data-tmpl="name"></span>
+                         <span data-tmpl="tooltipMsg" data-tooltip="" class="ico-info d-hide"></span>
+                        </td>
                         <td data-tmpl="subBalance"></td>
                       </tr>
                     </tbody>
