--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -489,8 +489,9 @@ div.form-closer {
   background-color: #040012;
   border: 1px solid #333;
   color: white;
-  max-width: 500px;
+  max-width: 300px;
   font-size: 15px;
+  border-radius: 4px;
 }
 
 #loader {
