js: fix wallet wait skipping when balance insufficient

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=nV9Bel"></script>
+<script src="/js/entry.js?v=XkMuUH"></script>
 </body>
 </html>
 {{end}}
