--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -218,9 +218,9 @@
 
 {{define "regAssetForm"}}
 <div class="text-center sans-light fs24 mb-3" data-tmpl="how">[[[how_reg]]]</div>
-<div class="mt-1">
+<div class="mt-1 fs14">
   <span class="ico-info"></span>
-  <span class="fs14">[[[whatsabond]]]</span>
+  <span class="ms-1">[[[whatsabond]]]</span>
 </div>
 <div data-tmpl="assets">
   <div data-tmpl="assetTmpl" class="reg-asset pointer d-flex align-items-stretch">
