whatsabond max-width

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -1,5 +1,7 @@
 #regAssetForm {
-  max-width: 425px;
+  #whatsabond {
+    max-width: 425px;
+  }
 
   div.reg-asset-allmkts {
     min-width: 210px;
