--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -218,7 +218,7 @@
 
 {{define "regAssetForm"}}
 <div class="text-center sans-light fs24 mb-3" data-tmpl="how">[[[how_reg]]]</div>
-<div class="mt-1 fs14">
+<div id="whatsabond" class="mt-1 fs14">
   <span class="ico-info"></span>
   <span class="ms-1">[[[whatsabond]]]</span>
 </div>
