--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -218,6 +218,10 @@
 
 {{define "regAssetForm"}}
 <div class="text-center sans-light fs24 mb-3" data-tmpl="how">[[[how_reg]]]</div>
+<div id="whatsabond" class="mt-1 fs14">
+  <span class="ico-info"></span>
+  <span class="ms-1">[[[whatsabond]]]</span>
+</div>
 <div data-tmpl="assets">
   <div data-tmpl="assetTmpl" class="reg-asset pointer d-flex align-items-stretch">
     <div class="reg-asset-logo-wrapper d-flex align-items-center justify-content-center">
