--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -507,7 +507,14 @@ div.form-closer {
   white-space: pre-line;
 }
 
-span.token-aware-symbol sup {
+img.token-parent {
+  width: 0.7em;
+  height: 0.7em;
+  position: relative;
+  top: -0.4em;
+}
+
+sup.token-parent {
   font-size: 0.6em;
   position: relative;
   top: -0.6em;
