--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -31,7 +31,7 @@
               <img id="assetLogo">
               <div class="ms-2 fs28 sans-light lh1" id="assetName" data-asset-name="1"></div>
             </div>
-            <div id="tokenParentBox" class="flex-center" class="fs16 d-hide">
+            <div id="tokenParentBox" class="flex-center fs18 sans" class="fs16 d-hide">
               <span>[[[Token on]]]</span>
               <img id="tokenParentLogo" class="ms-1">
               <span id="tokenParentName"></span>
@@ -317,10 +317,15 @@
     {{- /* SEND */ -}}
     <form class="pb-3 d-hide" id="sendForm" autocomplete="off">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <div class="py-1 text-center position-relative fs22 sans-light">
+      <div class="py-1 text-center position-relative fs24 sans-light">
         [[[Send]]]
-        <img id="sendLogo" class="micro-icon mx-1">
+        <img id="sendLogo" class="mini-icon mx-1">
         <span id="sendName"></span>
+        <div class="flex-center pt-1 d-hide fs18 sans" id="sendTokenMsgBox">
+          <span>[[[Token on]]]</span>
+          <img id="sendTokenParentLogo" class="ms-1 micro-icon">
+          <span id="sendTokenParentName"></span>
+        </div>
       </div>
       <div class="mt-3">
         <label for="sendAddr" class="form-label ps-1 mb-1">[[[Address]]]</label>
