remove sweeper. show inactive orders. handle unsupported assets

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -193,7 +193,7 @@
 
           {{- /* ORDER FORM */ -}}
           <div class="order-panel pb-3 position-relative">
-            <div class="d-flex flex-column align-items-stretch">
+            <div id="orderScroller" class="d-flex flex-column align-items-stretch">
 
               {{- /* TOKEN APPROVAL */ -}}
               <div class="fs15 pt-1 pb-3 text-center brdrbottom d-hide" id="tokenApproval">
@@ -407,13 +407,12 @@
               </div>
 
               {{- /* USER ORDERS */ -}}
-              <div class="position-relative text-center fs20 sans-light my-1">
+              <div class="text-center fs20 sans-light my-1">
                 [[[Your Orders]]]
-                <div id="sweepOrders" class="ico-sweep fs20 hoverbg pointer d-hide" data-tooltip="[[[sweep_orders]]]"></div>
               </div>
               <div id="unreadyOrdersMsg" class="d-hide px-3 py-1 flex-center fs16 red">[[[unready_wallets_msg]]]</div>
               <div id="userNoOrders" class="p-3 flex-center fs16 grey">no active orders</div>
-              <div id="userOrders" class="mb-3">
+              <div id="userOrders">
                 <div id="userOrderTmpl" class="user-order">
                   <div data-tmpl="header" class="user-order-header pointer">
                     <div data-tmpl="sideLight" class="side-indicator"></div>
@@ -432,10 +431,9 @@
                   </div>
                   <div data-tmpl="details" class="order-details d-hide">
                     <div class="user-order-datum full-span d-flex flex-row justify-content-start align-items-center brdrbottom fs14">
-                      <span data-tmpl="accelerateBttn" class="ico-rocket pointer hoverbg d-hide p-2" data-tooltip="[[[accelerate_order]]]"></span>
-                      <span data-tmpl="cancelBttn" class="ico-cross pointer hoverbg fs11 d-hide p-2" data-tooltip="[[[cancel_order]]]"></span>
-                      <span data-tmpl="sweepBttn" class="ico-sweep pointer hoverbg fs15 d-hide p-2" data-tooltip="[[[sweep_order]]]"></span>
-                      <a data-tmpl="link" class="ico-open pointer hoverbg me-3 fs13 plainlink p-2" data-tooltip="[[[order details]]]"></a>
+                      <span data-tmpl="accelerateBttn" class="ico-rocket pointer hoverbg d-hide py-2 px-3 me-1" data-tooltip="[[[accelerate_order]]]"></span>
+                      <span data-tmpl="cancelBttn" class="ico-cross pointer hoverbg fs11 d-hide py-2 px-3 mx-1" data-tooltip="[[[cancel_order]]]"></span>
+                      <a data-tmpl="link" class="ico-open pointer hoverbg fs13 plainlink py-2 px-3 ms-1" data-tooltip="[[[order details]]]"></a>
                     </div>
                     <div class="user-order-datum">
                       <span>[[[Type]]]</span>
@@ -473,10 +471,10 @@
                 </div>
               </div>{{- /* END USER ORDERS */ -}}
 
-              <a href="/orders" class="flex-center my-2 plainlink">[[[view order history]]]</a>
+              <a href="/orders" class="flex-center py-1 plainlink hoverbg">[[[view order history]]]</a>
 
               {{- /* RECENT MATCHES */ -}}
-              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4 mt-2 brdrtop">
+              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4 brdrtop">
                 <div class="text-center fs20 sans-light my-3">[[[Recent Matches]]]</div>
                 <table id="recentMatchesTable" class="ordertable">
                   <thead>
