--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -32,9 +32,9 @@
     {{end}}
     </div>
     <div>
-      <div id="exchanges" {{if eq (len .UserInfo.Exchanges) 0}} class="d-hide"{{end}}>
+      <div id="exchanges" {{if eq (len .Exchanges) 0}} class="d-hide"{{end}}>
         <h5>[[[registered dexes]]]</h5>
-        {{range $host, $xc := .UserInfo.Exchanges}}
+        {{range $host, $xc := .Exchanges}}
           <a href="/dexsettings/{{$host}}"><button class="bg2 selected"><div class=text-break>{{$host}}<span class="dex-settings-icon ico-settings"></span></div></button></a>
         {{end}}
       </div>
