--- a/client/webserver/site/src/html/register.tmpl
+++ b/client/webserver/site/src/html/register.tmpl
@@ -4,7 +4,7 @@
   <div class="position-absolute" id="forms">
 
     {{- /* LOGIN FORM */ -}}
-    <form class="d-hide{{if and (not .UserInfo.Authed) .UserInfo.Initialized }} selected{{end}}" id="loginForm">
+    <form class="d-hide{{if and (not .UserInfo.Authed) .Initialized }} selected{{end}}" id="loginForm">
       {{template "loginForm"}}
     </form>
 
@@ -14,12 +14,12 @@
     </form>
 
     {{- /* DEX ADDRESS FORM */ -}}
-    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed (not .Host)}} selected{{end}}" id="dexAddrForm">
+    <form class="d-hide{{if and .Initialized .UserInfo.Authed (not .Host)}} selected{{end}}" id="dexAddrForm">
       {{template "dexAddrForm" .}}
     </form>
 
     {{- /* DISCOVER ACCOUNT FORM */ -}}
-    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed .Host}} selected{{end}}" id="discoverAcctForm" data-host="{{.Host}}">
+    <form class="d-hide{{if and .Initialized .UserInfo.Authed .Host}} selected{{end}}" id="discoverAcctForm" data-host="{{.Host}}">
       {{template "discoverAcctForm" .}}
     </form>
 
