client/asset: add FundsMixer wallet trait and implement for dcr

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -10,7 +10,7 @@
       <label class="form-label ps-1 mb-1 small"> <span class="ico-info"></span></label>
       <input type="text" class="form-control select">
     </div>
-    <div data-tmpl="checkbox" class="d-flex align-items-center justify-content-center">
+    <div data-tmpl="checkbox" class="d-flex align-items-center">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="">
         <label class="form-check-label fs14"> <span class="ico-info fs13"></span></label>
