fix some market page display issues
This includes:
- Display balance widget when balance note is received only if the asset
  is set in the balance widget.
- Ensure there are visible changes when user clicks on another market instead
  of waiting for order book note which might delay. These visible
  changes include: clearing the depth chart, order book and recent matches, setting the
  balance widget wallets, selecting and saving the market.
- Setting a bottom border for the "Create wallets to trade" message.

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -373,7 +373,7 @@
               </form>
 
               {{- /* BALANCES */ -}}
-              <div id="noWallet" class="p-3 flex-center fs16 grey d-hide">
+              <div id="noWallet" class="p-3 brdrbottom flex-center fs16 grey d-hide">
                 Create wallets to trade
               </div>
               <div id="walletInfoTmpl" class="brdrtop brdrbottom mb-3 d-flex flex-column align-items-stretch min-fit">
