--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -22,7 +22,7 @@
       </div>
       <div class="pb-3 d-hide mt-3" id="seedRestore">
         <label for="seedInput" class="form-label ps-1 mb-1">[[[Restoration Seed]]]</label>
-        <input type="text" class="form-control select" id="seedInput" autocomplete="off">
+        <textarea class="form-control select mono" id="seedInput" rows="4" autocomplete="off" spellcheck="false"></textarea>
       </div>
       <div class="d-flex justify-content-between mt-4">
         <div class="px-1 fs13 pointer d-flex justify-content-start align-items-center" id="showSeedRestore"><span class="ico-plus fs11"></span> <div class="ps-2">[[[Restore from seed]]]</div></div>
@@ -100,7 +100,9 @@
 
       <div id="sbSeed" class="d-hide">
         <div class="fs18 mt-2">[[[save_seed_instructions]]]</div>
-        <div class="my-2 p-2" id="seedDiv"></div>
+        <div class="my-2 p-2 flex-center">
+          <pre class="fs18 mono mx-auto select-all" id="seedDiv"></pre>
+        </div>
         <button id="seedAck" class="selected">[[[Done]]]</button>
       </div>
     </form>
