--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -112,7 +112,9 @@
     <form class="d-hide" id="authorizeSeedDisplay">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="fs18 sans-light text-center mb-2">[[[dont_share]]]</div>
-      <div id="seedDiv"></div>
+      <div class="my-2 p-2 flex-center">
+        <pre class="fs18 mono mx-auto select-all" id="seedDiv"></pre>
+      </div>
     </form>
 
     {{- /* SYNC AND BALANCE FORM */ -}}
