buck review changes
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -400,6 +400,7 @@
         </div>
       </div>
       <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="reconfigErr"></div>
+      <div class="fs15 pt-3 d-hide errcolor text-break" id="reconfigSupportMsg"></div>
       <hr class="dashed my-2">
       <div class="sans-light fs17" id="otherActionsLabel">[[[other_actions]]]</div>
       <div class="d-flex flex-row fs15 pt-1">
