--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=3e0dbf06|48c44dba"></script>
-s</body>
+<script src="/js/entry.js?v=6988cfce|8129be20"></script>
+</body>
 </html>
 {{end}}
