--- a/client/webserver/site/src/css/wallets_dark.scss
+++ b/client/webserver/site/src/css/wallets_dark.scss
@@ -24,7 +24,8 @@ body.dark {
       border-color: $dark_border_color;
     }
 
-    table#vspPickerTable {
+    table#vspPickerTable,
+    table#ticketHistoryTable {
       border: 1px solid $dark_border_color;
 
       th,
