multi: add support for password recovery using seed
- Add /resetapppassword endpoint.
- Add ResetAppPass(...) to core.Core.
- Fix navigation menu display after logout
- Fix bug that prevents showing error on Export App Seed form
- Modify Login Form and add new button to settings page to accomodate
  new password reset funtionality.
- Hide unecessary/unused btns on the settings page if user is logged out.
- Add new form for App Pass Reset.

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -303,7 +303,7 @@ button.form-button {
 }
 
 #loginForm {
-  width: 250px;
+  width: 325px;
 
   #loader {
     -webkit-backdrop-filter: blur(4px);
@@ -320,6 +320,7 @@ button.form-button {
 }
 
 #changeAppPWForm,
+#resetAppPWForm,
 #dexAddrForm,
 #verifyForm,
 #appPWForm,
