--- a/client/webserver/site/src/html/login.tmpl
+++ b/client/webserver/site/src/html/login.tmpl
@@ -2,8 +2,14 @@
 {{template "top" .}}
 <div id="main" data-handler="login" class="main align-items-center justify-content-center flex-column">
   <div class="d-flex flex-column w-100" id="forms">
+    {{- /* LOGIN FORM */ -}}
     <form class="mx-auto my-5 d-hide" id="loginForm">
       {{template "loginForm"}}
+    </form>
+
+     {{- /* RESET APP PASSWORD */ -}}
+    <form class="mx-auto my-5 d-hide" id="resetAppPWForm">
+      {{template "appPassResetForm"}}
     </form>
   </div>
 </div>
